# rust-fil-commp-generate

./: .gitignore  Cargo.toml  Makefile  README.md  monitor.sh
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile
scripts/: dockerrunbash.sh
src/: commp.rs  lambda.rs  lib.rs  main.rs  multistore.rs
