[package]
name = "commp"
version = "0.0.0"
edition = "2018"

[dependencies]
filecoin-proofs = { path = "../rust-fil-proofs/filecoin-proofs" }
storage-proofs = { path = "../rust-fil-proofs/storage-proofs" }
hex = "0.4"
merkletree = "0.16.4"
anyhow = "1.0"
num-format = { version = "0.4", features = ["with-system-locale"] }
lambda_runtime = "0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
flexi_logger = "0.14"
rusoto_core = "0.42"
rusoto_s3 = "0.42"
generic-array = "0.13"

[[bin]]
name = "bootstrap"
path = "src/bin/lambda.rs"
